[package]
name = "desktop-sender"
description = "Sender for FCast"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
fcast-protocol = { path = "../../sdk/common/fcast-protocol" }
mcore.path = "../../sdk/mirroring_core/"
mdns-sd = "0.13.9"
flume = "0.11.1"
tracing-gstreamer = "0.9.0"
tracing-panic = "0.1.2"
slint.workspace = true
anyhow.workspace = true
tokio.workspace = true
gst.workspace = true
gst-app.workspace = true
gst-video.workspace = true
futures = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
parking_lot.workspace = true
uuid.workspace = true
# TODO: workspace
bytes = "1.10.1"
hyper = "1.7.0"
hyper-util = { version = "0.1.17", features = [ "server-auto", "tokio" ] }
http-body-util = "0.1.3"
http-range = "0.1.5"
gst-plugin-rtp = { version = "0.14.3", features = [ "static" ] }

[dependencies.fcast-sender-sdk]
path = "../../sdk/sender/fcast-sender-sdk"
default-features = false
features = [ "fcast", "chromecast", "discovery" ]

[build-dependencies]
slint-build.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11.0", default-features = false, features = ["async-std"] } # `tokio` breaks slint
xcb = { version = "1.6.0", features = ["randr", "xlib_xcb"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = "0.3.2"
core-foundation = "0.10.1"

[target.'cfg(target_os = "windows")'.dependencies]
enable-ansi-support = "0.3.1"