[package]
name = "desktop-sender"
description = "Sender for FCast"
version = "0.0.1"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
slint.workspace = true
anyhow.workspace = true
tokio.workspace = true
gst.workspace = true
gst-app.workspace = true
gst-video.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
parking_lot.workspace = true
bytes.workspace = true
smallvec.workspace = true
serde.workspace = true
flume = "0.11.1"
tracing-gstreamer = "0.9.0"
tracing-panic = "0.1.2"
futures = "0.3"
gst-plugin-rtp = { version = "0.14.3", features = [ "static" ] }
webbrowser = "1.0.6"
directories = "6.0.0"
toml_edit.workspace = true
fcast-protocol = { path = "../../sdk/common/fcast-protocol" }
mcore.path = "../../sdk/mirroring_core/"
image = { version = "0.25", default-features = false, features = [ "png", "jpeg", "webp", "avif", "rayon" ] }
url = "2"
file-server = { path = "../../sdk/file-server" }

[dependencies.fcast-sender-sdk]
path = "../../sdk/sender/fcast-sender-sdk"
default-features = false
features = [ "fcast", "chromecast", "discovery" ]

[build-dependencies]
slint-build.workspace = true
winresource = "0.1.28"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11.0", default-features = false, features = ["async-std"] } # `tokio` breaks slint
xcb = { version = "1.6.0", features = ["randr", "xlib_xcb"] }
rustls = { version = "0.23.36", default-features = false, features = [ "prefer-post-quantum", "tls12", "std", "ring" ]}
reqwest = { version = "0.13", default-features = false, features = [ "charset", "http2", "system-proxy", "rustls-no-provider" ] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-graphics = "0.3.2"
core-foundation = "0.10.1"
flate2 = "1.1.5"
tar = "0.4.44"
osakit = { version = "0.3", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
enable-ansi-support = "0.3.1"
windows-sys = { version = "0.60.0", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell",
] }

[target.'cfg(not(any(target_os = "windows", all(target_arch = "aarch64", target_os = "linux"))))'.dependencies]
tikv-jemallocator = "0.6"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { version = "0.13", features = [ "native-tls", "json" ] }
ctor = "0.2"
tempfile = "3.24.0"