[package]
name = "fcast"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
clap = "3"
serde.workspace = true
serde_json.workspace = true
ctrlc = "3.1.9"
tungstenite = { version = "0.21.0" }
url = "2.5.0"
tiny_http = "0.12.0"
fcast-protocol.path = "../../sdk/common/fcast-protocol"