[package]
name = "fcast"
version = "0.1.0"
license.workspace = true
edition = "2021"
publish = false

[dependencies]
clap.workspace = true
env_logger.workspace = true
ctrlc = "3.1.9"
fcast-sender-sdk = { path = "../../sdk/sender/fcast-sender-sdk", default-features = false, features = ["fcast", "http-file-server"] }