[package]
name = "fcast"
version = "0.1.0"
license.workspace = true
edition = "2021"
publish = false

[dependencies]
clap.workspace = true
env_logger.workspace = true
ctrlc.workspace = true
fcast-sender-sdk = { path = "../../sdk/sender/fcast-sender-sdk", default-features = false, features = ["fcast", "discovery"] }
file-server.path = "../../crates/file-server"
tokio.workspace = true