[package]
name = "fast"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false

[dependencies]
fcast-protocol = { path = "../../crates/fcast-protocol", features = [ "tokio-sender" ] }
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls = { workspace = true, default-features = false, features = [ "logging", "ring" ] }
rustls-pki-types.workspace = true
base64.workspace = true
simply_colored = "0.1.4"
file-server = { path = "../../crates/file-server", features = [ "headers" ] }
tracing.workspace = true
tracing-subscriber.workspace = true
clap-verbosity-flag = { version = "3", default-features = false, features = [ "tracing" ] }
rand.workspace = true
ctrlc.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
fcast-protocol = { path = "../../crates/fcast-protocol", features = [ "tokio-sender" ] }
file-server = { path = "../../crates/file-server", features = [ "headers" ] }
tokio.workspace = true
serde_json.workspace = true
tokio-rustls = { workspace = true, default-features = false, features = [ "logging", "ring" ] }
rustls-pki-types.workspace = true
rcgen.workspace = true
sha2.workspace = true