[package]
name = "remote-pipeline-dbg"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
slint = { workspace = true, features = [ "renderer-skia", "backend-winit", "std", "compat-1-2" ], optional = true }
chrono = { version = "0.4", optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[build-dependencies]
slint-build.workspace = true

[features]
default = ["gui"]
gui = ["dep:slint", "dep:chrono", "dep:serde", "dep:serde_json"]
client = []