[package]
name = "receiver-android"
version = "0.1.0"
edition = "2024"

[dependencies]
rcore = { path = "../rcore", features = ["android"] }
env_logger.workspace = true
# common = { path = "../common" }
anyhow.workspace = true
android_logger = "0.15.1"
log-panics = { version = "2.1.0", features = ["with-backtrace"]}
log.workspace = true
jni = "0.21.1"
tokio.workspace = true
parking_lot.workspace = true

[lib]
name = "fcastreceiver"
crate-type = ["cdylib"]

[package.metadata.android]
package = "org.fcast.receiver"
build_targets = ["aarch64-linux-android", "armv7-linux-androideabi", "x86_64-linux-android", "i686-linux-android"]

[package.metadata.android.sdk]
min_sdk_version = 26
target_sdk_version = 35