[package]
name = "desktop-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
rcore = { path = "../rcore", features = ["desktop"] }
# env_logger.workspace = true
anyhow.workspace = true

[target.'cfg(not(any(target_os = "windows", all(target_arch = "aarch64", target_os = "linux"))))'.dependencies]
tikv-jemallocator = "0.6"