[package]
name = "desktop-receiver"
version = "0.1.0"
edition = "2024"

[dependencies]
rcore = { path = "../rcore", features = ["desktop"] }
anyhow.workspace = true
mimalloc.workspace = true

[features]
default = ["systray"]
systray = ["rcore/systray"]
kms-backend = ["rcore/kms-backend"]
tracy = ["rcore/tracy"]
static-gst-plugins = ["rcore/static-gst-plugins"]

[target.'cfg(target_os = "windows")'.dependencies]
enable-ansi-support = "0.3.1"