[package]
name = "rcore"
version = "0.1.2"
edition = "2024"

[dependencies]
tokio.workspace = true
gst = { workspace = true, features = [ "v1_26" ] }
fcast-protocol = { path = "../../../sdk/common/fcast-protocol" }
gethostname = "1"
anyhow.workspace = true
futures.workspace = true
tokio-stream = "0.1"
url = "2"
thiserror = "2"
mdns-sd.workspace = true
fast_qr = { version = "0.13", features = [ "svg" ] }
gst-app.workspace = true
gst-video.workspace = true
gst-base.workspace = true
serde.workspace = true
# gst-gl = { package = "gstreamer-gl", version = "0.25", features = ["v1_20"], optional = true }
serde_json.workspace = true
if-addrs = "0.14"
base64 = "0.22"
bitflags = "2.10"
smallvec.workspace = true
parking_lot.workspace = true
image_swizzle.workspace = true
bytes.workspace = true
gst-plugin-reqwest = { rev = "1371ed652de9d8bd7f9efb60198beda2fedd62d3", git = "https://github.com/MAlba124/gst-plugins-rs.git", features = [ "static" ] }
gst-plugin-webrtc = { version = "0.15", default-features = false, features = [ "static" ], optional = true }
gst-plugin-webrtchttp = { version = "0.15", features = [ "static" ], optional = true }
gst-plugin-dav1d = { version = "0.15", features = [ "static" ], optional = true }
gst-tag = { package = "gstreamer-tag", version = "0.25" }
num_cpus.workspace = true
rand = { workspace = true, features = ["std_rng"] }
remote-pipeline-dbg = { path = "../../../tools/remote-pipeline-dbg", default-features = false, features = ["client"] }
tracing-tracy = { version = "=0.11.2", optional = true }
pango = { version = "0.22.0", features = ["v1_44"] }
hayro-jpeg2000 = "0.3"
jxl-oxide = { version = "0.12", features = ["image"] }
oneshot = { version = "0.2", features = ["std"] }
ctrlc.workspace = true
libplacebo.path = "../../../crates/libplacebo"

hayro-jpeg2000 = "0.3"
jxl-oxide = { version = "0.12", features = ["image"] }
libheif-rs = { version = "2.6", default-features = false, features = [ "v1_20", "image" ], optional = true }

# RAOP
rtsp-types = "0.1"
sdp-types = "0.1"
rsa = { version = "0.9", features = ["sha2", "sha1"] }
sha2 = "0.10"
sha1 = "0.10"
lazy_static = "1.5"
md-5 = "0.10"
aes = "0.8"
alac = { version = "0.5", default-features = false }
cbc = { version = "0.1", features = ["alloc", "std"] }
nom = "7.1"
gst-audio = { package = "gstreamer-audio", version = "0.25" }
byte-slice-cast = "1"
rtp-types = "0.1"

# Google Cast
rustls-pki-types = "1.12.0"
google-cast-protocol = { path = "../../../sdk/common/google-cast-protocol" }
rcgen = "0.14.7"
uuid.workspace = true

glow = "0.17.0"

[dependencies.slint]
workspace = true
features = [
    "backend-winit",
    "compat-1-2",
    "renderer-femtovg",
    "std",
]

[dependencies.imagelib]
package = "image"
version = "0.25"
default-features = false
features = ["default-formats", "avif-native"]

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-gstreamer.workspace = true
tracing-panic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gst-plugin-rtp = { workspace = true, optional = true }
clap.workspace = true
keepawake = "0.6"

[target.'cfg(not(target_os = "windows"))'.dependencies]
gst-allocators = { package = "gstreamer-allocators", version = "0.25" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
# gst-gl-egl = { package = "gstreamer-gl-egl", version = "0.25" }
# gst-gl-x11 = { package = "gstreamer-gl-x11", version = "0.25" }
glutin_egl_sys = { version = "0.7.1" }
# glutin_glx_sys = { version = "0.6.1" }
rustls = { version = "0.23", default-features = false, features = [ "prefer-post-quantum", "tls12", "std", "ring" ]}
reqwest = { version = "0.13", default-features = false, features = [ "charset", "http2", "system-proxy", "default-tls" ] }
ksni = { version = "0.3", default-features = false, features = ["async-io"], optional = true }
# TODO: add this to all targets once linking is figured out
libheif-rs = { version = "2.6", default-features = false, features = [ "v1_20", "image" ], optional = true }
tokio-rustls = { version = "0.26.4", default-features = false, features = [ "logging", "ring", "tls12" ] }
egl-sys.path = "../../../crates/egl-sys"
drm-fourcc = "2.2.0"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = { version = "0.21.3", default-features = false, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
gst-gl-egl = { package = "gstreamer-gl-egl", version = "0.25" }
glutin_egl_sys = { version = "0.7.1" }
tracing-gstreamer.workspace = true
tracing-panic.workspace = true
tracing = { workspace = true, features = [ "log" ] }
jni = "0.21.1"
reqwest = { version = "0.13", default-features = false, features = [ "native-tls", "charset", "http2", "system-proxy" ] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { version = "0.13", features = [ "native-tls" ] }
app-updater = { path = "../../../crates/app-updater"}
tokio-rustls = { version = "0.26.4", default-features = false, features = [ "logging", "aws_lc_rs", "tls12" ] }
receiver-resources.path = "../../../crates/receiver-resources"
gst-gl = { package = "gstreamer-gl", version = "0.25", features = ["v1_20"] }

[build-dependencies]
slint-build.workspace = true

[features]
default = []
desktop = ["dep:libheif-rs"]
systray = ["dep:ksni", "dep:tray-icon"]
kms-backend = ["slint/backend-linuxkms"]
android = ["slint/backend-android-activity-06", "slint/renderer-skia"]
tracy = ["dep:tracing-tracy"]
static-gst-plugins = ["dep:gst-plugin-webrtchttp", "dep:gst-plugin-webrtc", "dep:gst-plugin-dav1d", "dep:gst-plugin-rtp"]