[package]
name = "rcore"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
gst = { workspace = true, features = [ "v1_26" ] }
fcast-protocol = { path = "../../../sdk/common/fcast-protocol" }
gethostname = "1"
anyhow.workspace = true
futures = "0.3"
tokio-stream = "0.1"
url = "2"
thiserror = "2"
mdns-sd.workspace = true
fast_qr = { version = "0.13", features = [ "svg" ] }
gst-app.workspace = true
gst-video.workspace = true
gst-base.workspace = true
gst-gl = { package = "gstreamer-gl", version = "0.24.2" }
gst-allocators = { package = "gstreamer-allocators", version = "0.24.4" }
serde_json.workspace = true
if-addrs = "0.14"
base64 = "0.22"
bitflags = "2.10"
smallvec.workspace = true
parking_lot.workspace = true
image_swizzle.workspace = true
bytes.workspace = true
gst-plugin-reqwest = { rev = "ed20fcd7a6794003f7fb52febcefda6965221d7e", git = "https://github.com/MAlba124/gst-plugins-rs.git", features = [ "static" ] }
gst-plugin-webrtc = { version = "0.14.4", default-features = false, features = [ "static" ] }
gst-plugin-webrtchttp = { version = "0.14.4", features = [ "static" ] }
gst-tag = { package = "gstreamer-tag", version = "0.24.4" }
num_cpus.workspace = true
rand = { workspace = true, features = ["std_rng"] }
remote-pipeline-dbg = { path = "../../../tools/remote-pipeline-dbg", default-features = false, features = ["client"] }
tracing-tracy = { version = "=0.11.2", optional = true }

hayro-jpeg2000 = "0.3"
jxl-oxide = { version = "0.12", features = ["image"] }

# RAOP
rtsp-types = "0.1"
sdp-types = "0.1"
rsa = { version = "0.9", features = ["sha2", "sha1"] }
sha2 = "0.10"
sha1 = "0.10"
lazy_static = "1.5"
md-5 = "0.10"
aes = "0.8"
alac = { version = "0.5", default-features = false }
cbc = { version = "0.1", features = ["alloc", "std"] }
nom = "7.1"
gst-audio = { package = "gstreamer-audio", version = "0.24.4" }
byte-slice-cast = "1"
rtp-types = "0.1"

[dependencies.slint]
# path = "../../../../slint/api/rs/slint"
# git = "https://gitlab.futo.org/videostreaming/fcast-slint.git"
# rev = "cefc48cad0b6425c223577af9b27c88c70cceb7c"
workspace = true
features = [
    "accessibility",
    "backend-winit",
    "compat-1-2",
    "renderer-skia-opengl",
    "std",
]

[dependencies.image]
version = "0.25"
default-features = false
features = [
    # TODO:
    #  * APNG
    #  * GIF
    # "rayon", Only good for encoding?
    "avif",
    "avif-native",
    "bmp",
    "gif",
    "ico",
    "jpeg",
    "png",
    "webp",
]

[target.'cfg(not(target_os = "android"))'.dependencies]
tracing-gstreamer.workspace = true
tracing-panic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
gst-plugin-rtp = { version = "0.14.4", features = [ "static" ] }
clap.workspace = true
keepawake = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
gst-gl-egl = { package = "gstreamer-gl-egl", version = "0.24.0" }
gst-gl-x11 = { package = "gstreamer-gl-x11", version = "0.24.0" }
glutin_egl_sys = { version = "0.7.1" }
glutin_glx_sys = { version = "0.6.1" }
rustls = { version = "0.23", default-features = false, features = [ "prefer-post-quantum", "tls12", "std", "ring" ]}
reqwest = { version = "0.13", default-features = false, features = [ "charset", "http2", "system-proxy", "default-tls" ] }
ksni = { version = "0.3", default-features = false, features = ["async-io"], optional = true }
# TODO: add this to all targets once linking is figured out
libheif-rs = { version = "2.6", default-features = false, features = [ "v1_20", "image" ], optional = true }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = { version = "0.21.3", default-features = false, optional = true }

[target.'cfg(target_os = "android")'.dependencies]
gst-gl-egl = { package = "gstreamer-gl-egl", version = "0.24.0" }
glutin_egl_sys = { version = "0.7.1" }
tracing-gstreamer.workspace = true
tracing-panic.workspace = true
tracing = { workspace = true, features = [ "log" ] }
jni = "0.21.1"
reqwest = { version = "0.13", default-features = false, features = [ "native-tls", "charset", "http2", "system-proxy" ] }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
reqwest = { version = "0.13", features = [ "native-tls" ] }

[build-dependencies]
slint-build.workspace = true
# slint-build = { path = "../../../../slint/api/rs/build" }

[features]
# desktop = ["slint/backend-linuxkms"]
default = []
desktop = ["dep:libheif-rs"]
systray = ["dep:ksni", "dep:tray-icon"]
kms-backend = ["slint/backend-linuxkms"]
android = ["slint/backend-android-activity-06", "slint/renderer-skia"]
tracy = ["dep:tracing-tracy"]

# TODO: have a build mode which statically links every rust plugin we use + use fat LTO to check performance gains