[package]
name = "fcast-protocol"
description = "Data types for FCast"
repository = "https://gitlab.futo.org/videostreaming/fcast"
version = "0.1.0"
license.workspace = true
edition = "2021"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1.20"
thiserror.workspace = true